test/files/run/t9206.check

scala> val i: Int = "foo"
<console>:11: error: type mismatch;
 found   : String("foo")
 required: Int
       val i: Int = "foo"
                    ^

scala> { val j = 42 ; val i: Int = "foo" + j }
<console>:12: error: type mismatch;
 found   : String
 required: Int
       { val j = 42 ; val i: Int = "foo" + j }
                                         ^

scala> :quit
